# slu-docker-compose

./: docker-compose.yaml
backend/: .env  .gitignore  Cargo.toml  Dockerfile
backend/src/: cors.rs  main.rs
backend/src/functions/: jwt_secret.rs  mod.rs
backend/src/guards/: jwt_user.rs  mod.rs
backend/src/routes/: mod.rs  site_handler.rs
backend/src/routes/auth/: login.rs  verify.rs
backend/src/types/: claims.rs
frontend/: .env  .gitignore  Dockerfile  README.md  env.d.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: AuthVerify.vue  EndGame.vue  Generated.vue  InfoGame.vue  MidGameFouls.vue  MidGameGoalkeep.vue  MidGameGoals.vue  PrepGame.vue
frontend/src/functions/: countGoals.ts
frontend/src/functions/PDF/: drawFouls.ts  drawGoalKeeps.ts  drawGoals.ts  drawGoalsCount.ts  drawInfo.ts  drawTeams.ts  drawTrainers.ts  getCords.ts
frontend/src/functions/api/: auth.service.ts
frontend/src/lang/: cz.json  en.json  index.ts  pl.json
frontend/src/router/: index.ts
frontend/src/stores/: mainDataStore.ts  toastController.ts
frontend/src/types/: foulType.ts  gameInfoType.ts  goalType.ts  goalkeepType.ts  mainGameType.ts  playerType.ts  teamType.ts
frontend/src/views/: HomeView.vue
