[package]
name = "slu"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
jsonwebtoken = "9"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }